Clarify twist loading env variables

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ MOTOTWIST_SECRET_KEY="changethis"  # Change this!
 OSM_URL="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"  # Recommended to change this
 OSRM_URL="https://router.project-osrm.org"  # Recommended to change this
 TWIST_SIMPLIFICATION_TOLERANCE_M="30m"  # Set to 0m to save all Twist route points (ex. "0", "10m", "30.5 m")
-DEFAULT_TWISTS_PER_PAGE=20  # Number of Twists per page by default
-MAX_TWISTS_PER_PAGE=100  # Max number of Twists per page that can be set by a user
+DEFAULT_TWISTS_LOADED=20  # Number of Twists loaded at a time
+MAX_TWISTS_LOADED=100  # Max number of Twists loaded at a time that can be set by a user
 
 # User Options
 MOTOTWIST_ADMIN_EMAIL="admin@admin.com"  # Change this!
