--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ MOTOTWIST_SECRET_KEY="changethis"  # Change this!
 OSM_URL="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"  # Recommended to change this
 OSRM_URL="https://router.project-osrm.org"  # Recommended to change this
 TWIST_SIMPLIFICATION_TOLERANCE_M="30m"  # Set to 0m to save all Twist route points (ex. "0", "10m", "30.5 m")
+DEFAULT_TWISTS_LOADED=20  # Number of Twists loaded at a time
+MAX_TWISTS_LOADED=100  # Max number of Twists loaded at a time that can be set by a user
+RATINGS_FETCHED_PER_QUERY=20  # Number of ratings fetched during each query
 
 # User Options
 MOTOTWIST_ADMIN_EMAIL="admin@admin.com"  # Change this!
