Better session handling. Close #34
Sliding window, expiry warning, and auto-logout added. Expired cookies now actually get removed. Configurable session timeout.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ RATINGS_FETCHED_PER_QUERY=20  # Number of ratings fetched during each query
 MOTOTWIST_ADMIN_EMAIL="admin@admin.com"  # Change this!
 MOTOTWIST_ADMIN_PASSWORD="password"
 ALLOW_USER_REGISTRATION=False  # Enable if you want anyone with access to your instance to be able to create an account
+AUTH_COOKIE_MAX_AGE=3600  # The maximum time a login session should be valid. 0 to disable limit
+AUTH_SLIDING_WINDOW_ENABLED=True  # Whether or not login sessions should silently re-authenticate themselves
+AUTH_EXPIRY_WARNING_OFFSET=300  # Seconds before the login session ends that the user is warned. 0 to disable
 
 # Database Options
 POSTGRES_HOST="db"  # Must match the name of the database service in docker-compose.yml
