--- a/.env.example
+++ b/.env.example
@@ -3,21 +3,21 @@ MOTOTWIST_BASE_URL="http://localhost:8000"  # Change this to whatever URL your M
 MOTOTWIST_SECRET_KEY="changethis"  # Change this!
 OSM_URL="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"  # Recommended to change this
 OSRM_URL="https://router.project-osrm.org"  # Recommended to change this
-TWIST_SIMPLIFICATION_TOLERANCE_M="30m"  # Set to 0m to save all Twist route points (ex. "0", "10m", "30.5 m")
-DEFAULT_TWISTS_LOADED=20  # Number of Twists loaded at a time
-MAX_TWISTS_LOADED=100  # Max number of Twists loaded at a time that can be set by a user
-RATINGS_FETCHED_PER_QUERY=20  # Number of ratings fetched during each query
+TWIST_SIMPLIFICATION_TOLERANCE_M="30m"
+DEFAULT_TWISTS_LOADED=20
+MAX_TWISTS_LOADED=100
+RATINGS_FETCHED_PER_QUERY=20
 
 # User Options
 MOTOTWIST_ADMIN_EMAIL="admin@admin.com"  # Change this!
-MOTOTWIST_ADMIN_PASSWORD="password"
-ALLOW_USER_REGISTRATION=False  # Enable if you want anyone with access to your instance to be able to create an account
-AUTH_COOKIE_MAX_AGE=3600  # The maximum time a login session should be valid. 0 to disable limit
-AUTH_SLIDING_WINDOW_ENABLED=True  # Whether or not login sessions should silently re-authenticate themselves
-AUTH_EXPIRY_WARNING_OFFSET=300  # Seconds before the login session ends that the user is warned. 0 to disable
+MOTOTWIST_ADMIN_PASSWORD="password"  # Change this in MotoTwist (don't leave final password in plaintext)
+ALLOW_USER_REGISTRATION=False
+AUTH_COOKIE_MAX_AGE=3600
+AUTH_SLIDING_WINDOW_ENABLED=True
+AUTH_EXPIRY_WARNING_OFFSET=300
 
 # Database Options
-POSTGRES_HOST="db"  # Must match the name of the database service in docker-compose.yml
+POSTGRES_HOST="db"
 POSTGRES_PORT=5432
 POSTGRES_DB="mototwist"
 POSTGRES_USER="mototwist"
