Add email capability

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,15 @@ DEFAULT_TWISTS_LOADED=20
 MAX_TWISTS_LOADED=100
 RATINGS_FETCHED_PER_QUERY=20
 
+# Email Options
+EMAIL_ENABLED=False
+SMTP_HOST="smtp.example.com"  # Change this if enabling email
+SMTP_PORT=587  # 587 (TLS) or 465 (SSL)
+SMTP_USERNAME="changethis"  # Change this if enabling email
+SMTP_PASSWORD="changethis"  # Change this if enabling email
+SMTP_FROM_EMAIL="noreply@example.com"  # Change this if enabling email
+SMTP_USE_TLS=True
+
 # User Options
 MOTOTWIST_ADMIN_EMAIL="admin@admin.com"  # Change this!
 MOTOTWIST_ADMIN_PASSWORD="password"  # Change this in MotoTwist (don't leave final password in plaintext)
