Implement forgot password for new users

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Application Options
+MOTOTWIST_INSTANCE_NAME="MotoTwist"
 MOTOTWIST_BASE_URL="http://localhost:8000"  # Change this to whatever URL your Mototwist instance will be hosted at
 MOTOTWIST_SECRET_KEY="changethis"  # Change this!
 OSM_URL="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"  # Recommended to change this
