Email: verification, password reset, etc (#87)

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Application Options
+MOTOTWIST_INSTANCE_NAME="MotoTwist"
 MOTOTWIST_BASE_URL="http://localhost:8000"  # Change this to whatever URL your Mototwist instance will be hosted at
 MOTOTWIST_SECRET_KEY="changethis"  # Change this!
 OSM_URL="https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"  # Recommended to change this
@@ -7,6 +8,15 @@ TWIST_SIMPLIFICATION_TOLERANCE_M="30m"
 DEFAULT_TWISTS_LOADED=20
 MAX_TWISTS_LOADED=100
 RATINGS_FETCHED_PER_QUERY=20
+
+# Email Options
+EMAIL_ENABLED=False
+SMTP_HOST="smtp.example.com"  # Change this if enabling email
+SMTP_PORT=587  # 587 (TLS) or 465 (SSL)
+SMTP_USERNAME="changethis"  # Change this if enabling email
+SMTP_PASSWORD="changethis"  # Change this if enabling email
+SMTP_FROM_EMAIL="noreply@example.com"  # Change this if enabling email
+SMTP_USE_TLS=True
 
 # User Options
 MOTOTWIST_ADMIN_EMAIL="admin@admin.com"  # Change this!
